@@ -66,6 +66,7 @@ Date: 2025-12-07
     - Modelled vapour icons/"fluid icons that have are a little transparent at the bottom"
     - Changed baryte ore recipe to be made in the leaching field, instead of the chemical plant. This was to make the leaching field have more of a purpose, and should place nicely with some changes that will come Later.
     - updated the molybdenum icon to be in my normal lighting and rendering. it'll be updated for real, but i aint got time for that!
+    - Made advanced breadboard recipes need 3 of the last tier's breadboard, instead of 1.
 
   Fixes:
     - Fixed the tech icons of all battery equipment.
